<resources>
    <string name="common_bad_password">Password is incorrect</string>
    <string name="common_bad_format">Bad format</string>
    <string name="common_logged_in">You were logged in</string>

    <string name="home_btn_virtual" translatable="false">Virtual danger</string>
    <string name="home_btn_real" translatable="false">Real danger</string>

    <string name="account_textView_header_register">Register</string>
    <string name="account_textView_header_login">Login</string>
    <string name="account_editText_nick_hint">Type a nick</string>
    <string name="account_editText_password_hint">Type a password</string>
    <string name="account_editText_repeatPassword_hint">Repeat your password</string>
    <string name="account_button_action_register">Register</string>
    <string name="account_button_action_login">Login</string>
    <string name="account_button_switch_to_login">I have an account</string>
    <string name="account_button_switch_to_register">I have an account</string>


    <string name="danger_listView_additionalInfo">Minutes to read the article: %d</string>

    <string name="dialog_article_info_minutes_question">Estimated reading time:</string>
    <string name="dialog_article_info_minutes_answear">%d minutes</string>
    <string name="dialog_article_info_pages_question">You have read:</string>
    <string name="dialog_article_info_pages_answear">%d out of %d pages</string>
    <string name="dialog_article_info_difficulty_question">The article\'s difficulty is:</string>
    <string name="dialog_article_info_difficulty_answear">%s</string>
    <string name="dialog_article_info_percent">%d</string>

    <string name="notify_Title" translatable="false">Question?</string>
    <string name="True" translatable="false">Yes</string>
    <string name="False" translatable="false">No</string>
    <string name="Notify_BadAn" translatable="false">Bad answer!</string>
    <string name="app_name" translatable="false">StaySafe</string>
    <string name="Home_btn_dangerous" translatable="false">Internet Dangers</string>
    <string name="Home_btn_avoid" translatable="false">Real-life Dangers</string>
    <string name="Home_btn_tips" translatable="false">Quick tips</string>
    <string name="home_dialog_choose" translatable="false">Choose the topics</string>
    <string name="logout" translatable="false">LOGOUT</string>
    <string name="avoid_dangers_on_internet" translatable="false">Avoid Dangers on Internet</string>
    <string name="avoid_dangers_in_real_life" translatable="false">Avoid Dangers in real life</string>
    <string name="name_admin" translatable="false">Name(admin)</string>
    <string name="pass_admin" translatable="false">Pass(admin)</string>
    <string name="register" translatable="false">Register</string>
    <string name="login" translatable="false">login</string>
    <string name="name" translatable="false">Name</string>
    <string name="pass" translatable="false">Pass</string>
    <string name="email" translatable="false">Email</string>
    <string name="back" translatable="false">back</string>
    <string name="login1" translatable="false">Login</string>
    <string name="continue_string">Continue</string>
    <string name="result_string">Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_question">QuestionActivity</string>
</resources>
