<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_articleInfo_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_articleInfo_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#FFF"
        android:padding="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:text="@string/dialog_article_info_minutes_question"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_articleInfo_minutes"
            android:text="@string/dialog_article_info_minutes_answear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:text="@string/dialog_article_info_pages_question"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_articleInfo_pages"
            android:text="@string/dialog_article_info_pages_answear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:text="@string/dialog_article_info_difficulty_question"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_articleInfo_difficulty"
            android:text="@string/dialog_article_info_difficulty_answear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialog_articleInfo_read"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Read Article"/>

        <Button
            android:id="@+id/dialog_articleInfo_test"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Take Test"/>
    </LinearLayout>


</LinearLayout>